--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+DB_HOST=localhost
+DB_TYPE=postgres
+DB_NAME=nest_todo_api
+DB_USERNAME=postgres
+DB_PASSWORD=toor
+DB_PORT=5432
 
 JWT_SECRET=hello
-JWT_EXPIRATION_TIME=60
+JWT_EXPIRATION_TIME=120
