--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "joi": "^17.9.1",
+    "migration-cli": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.10.0",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.14",
+    "typeorm": "^0.3.16",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
     "@types/jest": "29.5.0",
     "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
