--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
-    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/nodemailer": "^6.4.8",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "aws-sdk": "^2.1376.0",
     "bcrypt": "^5.1.0",
     "circular-json": "^0.5.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "joi": "^17.9.1",
+    "mailgun-js": "^0.22.0",
     "migration-cli": "^1.1.1",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
